# sistema-sussy

./: .gitignore  pyproject.toml  requirements.txt  yolo11n.onnx  yolo11x.onnx
datasets/coco8/labels/: train.cache  val.cache
runs/detect/train/: args.yaml
sussy/: __init__.py  config.py  exportar_crops.py  main.py
sussy/core/: apariencia.py  backends.py  dataset_utils.py  deteccion.py  fuentes.py  ingesta.py  iou_utils.py  movimiento.py  onnx_inference.py  pipeline.py  prediccion.py  presets.py  registro.py  relevancia.py  seguimiento.py  utilidades_iou.py  visualizacion.py
sussy/training/: README.md  Sussy_Entrenamiento_Colab.ipynb  __init__.py  anotador_simple.py  backend_entrenamiento.py  dataset.py  entrenamiento.py  entrenar.py  extractor_frames.py  organizador_dataset.py  taxonomia.py
